--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,45 +1,56 @@
-name: generate snake animation
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
+
+name: Generate Snake
+
+# Controls when the action will run. This action runs every 24 hours.
 
 on:
   schedule:
-    - cron: "0 */8 * * *"
+    # every 24 hours
+    - cron: "0 */24 * * *"
 
+  # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
+  # On changes
   push:
     branches:
       - master
 
+# The sequence of runs in this workflow:
 jobs:
-  generate:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-
+    permissions:
+      contents: write
+    timeout-minutes: 5
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
+
+      # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Generates the snake
+      - uses: Platane/snk/svg-only@v3
+        id: snake-gif
         with:
-          # github user name to read the contribution graph from (**required**)
-          # using action context var `github.repository_owner` or specified user
           github_user_name: ${{ github.repository_owner }}
-
-          # list of files to generate.
-          # one file per line. Each output can be customized with options as query string.
-          #
-          #  supported options:
-          #  - palette:     A preset of color, one of [github, github-dark, github-light]
-          #  - color_snake: Color of the snake
-          #  - color_dots:  Coma separated list of dots color.
-          #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
-          #                 Exactly 5 colors are expected.
+          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
           outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
 
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.6.0
+      # show the status of the build. Makes it easier for debugging (if there's any issues).
+      - run: git status
+
+      # Push the images to the output branch
+      - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
+          # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
